Add performance instrumentation and baseline metrics to serial VQE implementation
- Instrument main.py with timing infrastructure for performance profiling
- Add baseline performance metrics output (runtime, throughput, per-iteration timing)
- Improve plotting with proper figure sizing and save to file instead of display
- Create test_main.py for quick validation (5 bonds, 50 iterations)
- Add comprehensive README with model description, usage instructions, and parallelization plan
- Enhance .gitignore with LaTeX artifacts and HPC job output patterns
- Add serial implementation report (LaTeX and PDF) documenting mathematical model and optimization strategy

Baseline metrics captured: 50.64s total runtime, 157.98 circuits/sec, 6.3ms per VQE iteration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-led / optimized / C extension files
+# Compiled / optimized / C extension files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -45,3 +45,57 @@ venv.bak/
 .idea/
 .vscode/
 
+# LaTeX auxiliary files
+*.aux
+*.log
+*.out
+*.toc
+*.bbl
+*.blg
+*.synctex.gz
+*.fls
+*.fdb_latexmk
+*.lof
+*.lot
+*.nav
+*.snm
+*.vrb
+*.bcf
+*.run.xml
+
+# HPC and PBS job output
+*.o[0-9]*
+*.e[0-9]*
+*.po[0-9]*
+*.pe[0-9]*
+output.log
+error.log
+slurm-*.out
+
+# Python profiling and performance
+*.prof
+*.lprof
+*.pstats
+profile_*.txt
+
+# Temporary and backup files
+*~
+*.swp
+*.swo
+*.bak
+*.tmp
+.DS_Store
+
+# Python cache and pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Ray distributed computing
+/tmp/ray/
+ray_results/
+
+# Output images and results (keep tracked in results/)
+# Uncomment if you want to ignore generated plots
+# *.png
+# *.pdf
