--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
     - numpy
     - scipy
     - matplotlib
+    - 
 
     # Task-based parallelism
     # - ray
@@ -21,5 +22,6 @@ dependencies:
         - jax
         - jaxlib
         - pennylane-catalyst
+        - optax
 
     
